--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
-    "@nuxt/ui": "^3.3.2",
+    "@nuxt/ui": "4.0.0-alpha.1",
     "@pinia/nuxt": "0.11.2",
     "@tailwindcss/vite": "^4.1.12",
     "eslint": "^9.34.0",
